Various refactorings and file cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
-.bundle/
+*.gem
+.bundle
 .DS_Store
-.yardoc
-log/*.log
-pkg/
+.rvmrc
+pkg/*
 test/dummy/db/*.sqlite3
 test/dummy/log/*.log
 test/dummy/tmp/
 tmp
+
+
+
+Gemfile.lock
+gemfiles/*.lock
