--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,14 @@ rvm:
   - 2.1.7
   - 2.2.3
   - 2.3.1
+gemfile:
+  - Gemfile
+  - Gemfile-Rails-4.2
+matrix:
+  exclude:
+    - rvm: 1.9.3
+      gemfile: Gemfile
+    - rvm: 2.0.0
+      gemfile: Gemfile
+    - rvm: 2.1.7
+      gemfile: Gemfile
