--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,13 @@ rvm:
   - 2.2.3
   - 2.3.1
 gemfile:
-  - Gemfile
+  - Gemfile-Rails-3.2
   - Gemfile-Rails-4.2
+  - Gemfile
 matrix:
   exclude:
+    - rvm: 1.9.3
+      gemfile: Gemfile-Rails-4.2
     - rvm: 1.9.3
       gemfile: Gemfile
     - rvm: 2.0.0
