--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,17 @@ rvm:
   - 2.2.3
   - 2.3.1
 gemfile:
-  - Gemfile-Rails-3.2
-  - Gemfile-Rails-4.2
+  - Gemfile-Rails-3.x
+  - Gemfile-Rails-4.x
   - Gemfile
 matrix:
   exclude:
+    - rvm: 2.2.3
+      gemfile: Gemfile-Rails-3.x
+    - rvm: 2.3.1
+      gemfile: Gemfile-Rails-3.x
     - rvm: 1.9.3
-      gemfile: Gemfile-Rails-4.2
+      gemfile: Gemfile-Rails-4.x
     - rvm: 1.9.3
       gemfile: Gemfile
     - rvm: 2.0.0
