Set code highlighter to rouge

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ destination: ./_site
 
 future:      true
 lsi:         false
-highlighter: true
+highlighter: rouge
 markdown:    redcarpet
 permalink:   date
 
